update case studies

--- a/NEON_manuscript/Case studies/mvgam_case_study3.Rmd
+++ b/NEON_manuscript/Case studies/mvgam_case_study3.Rmd
@@ -15,7 +15,7 @@ library(knitr)
 opts_chunk$set(tidy.opts=list(width.cutoff=40),tidy=TRUE)
 ```
 
-Here we will work use the `mvgam` package, which fits dynamic GAMs using MCMC sampling via the `JAGS` software (Note that `JAGS` 4.3.0 is required; installation links are found [here](https://sourceforge.net/projects/mcmc-jags/files/)), to estimate a distributed lag model
+Here we will use the `mvgam` package, which fits dynamic GAMs using MCMC sampling via the `JAGS` software (Note that `JAGS` 4.3.0 is required; installation links are found [here](https://sourceforge.net/projects/mcmc-jags/files/)), to estimate paramaters of a Bayesian distributed lag model.  These models are used to describe simultaneously non-linear and delayed functional relationships between a covariate and a response, and are sometimes referred to as exposure-lag-response models.
 
 Load the Portal rodents capture data, which are available from the `portalr` package
 ```{r message=FALSE, warning = FALSE}
@@ -25,7 +25,7 @@ library(dplyr)
 portal_dat <- read.csv('https://raw.githubusercontent.com/nicholasjclark/mvgam/master/NEON_manuscript/rodents_data.csv', as.is = T)
 ```
 
-We'll keep data from 2004 onwards to make the model quicker to estimate for this simple example
+We'll keep data from the year 2004 onwards to make the model quicker to estimate for this simple example
 ```{r}
 portal_dat %>%
   dplyr::filter(year >= 2004) %>%
@@ -33,17 +33,16 @@ portal_dat %>%
   dplyr::slice_head(n = 1) -> portal_dat_all
 ```
 
-Below is a slight modifiction of Simon Wood's lag matrix function (which he uses in his distributed lag example from the 2nd edition of his [GAMs in R book](https://www.taylorfrancis.com/books/mono/10.1201/9781315370279/generalized-additive-models-simon-wood))
+Below is an exact reproduction of Simon Wood's lag matrix function (which he uses in his distributed lag example from his book [Generalized Additive Models - An Introduction with R 2nd edition](https://www.taylorfrancis.com/books/mono/10.1201/9781315370279/generalized-additive-models-simon-wood)). Here we supply a vector and specify the maximum lag that we want, and it will return a matrix of dimension `length(x) * lag`. Note that `NAs` are used for the missing lag values at the beginning of the matrix. In essence, the matrix objects represent exposure histories, where each row represents the lagged values of the predictor that correspond to each observation in `y`
 ```{r}
-lagard <- function(x,n.lag=6) {
-  n <- length(x); X <- matrix(NA,n,n.lag)
-  for (i in 1:n.lag) X[i:n,i] <- x[i:n-i+1]
-  X[is.na(X)] <- mean(X, na.rm = T)
+lagard <- function(x, n.lag = 6) {
+  n <- length(x); X <- matrix(NA, n, n.lag)
+  for (i in 1:n.lag) X[i:n, i] <- x[i:n - i + 1]
   X
 }
 ```
 
-Organise all data needed for modelling into a list. We will focus only on the species `PP`, which shows reasonable seasonality in its captures over time
+Organise all data needed for modelling into a list. We will focus only on the species *Chaetodipus penicillatus* (labelled as `PP`), which shows reasonable seasonality in its captures over time
 ```{r}
 data_all <- list(lag=matrix(0:5,nrow(portal_dat_all),6,byrow=TRUE),
             y = portal_dat_all$PP,
@@ -54,7 +53,7 @@ data_all$precip <- lagard(portal_dat_all$precipitation)
 data_all$mintemp <- lagard(portal_dat_all$mintemp)
 ```
 
-The matrix elements of the data list look as follows:
+The exposure history matrix elements of the data list look as follows:
 ```{r}
 head(data_all$lag, 5)
 head(data_all$precip, 5)
@@ -73,7 +72,7 @@ View the raw series. There is a clear seasonal pattern to the data, and there ar
 plot(ts(data_all$y, frequency = 12), ylab = 'Captures for PP', xlab = '' )
 ```
 
-Create training and testing sets; start at observation 7 so that the mean-imputed values at the beginning of the covariate lag matrices are not included. Currently there is no option for on-the-fly imputation of missing covariate values in `mvgam` models, though this can easily be done in `JAGS` by specifying prior distributions over these missing entries
+Create training and testing sets; start at observation 7 so that the `NA` values at the beginning of the covariate lag matrices are not included. Currently there is no option for on-the-fly imputation of missing covariate values in `mvgam` models, though this can easily be done in `JAGS` by specifying prior distributions over these missing entries
 ```{r}
 data_train <- list(lag = data_all$lag[7:174,],
                    y = data_all$y[7:174],
@@ -91,7 +90,7 @@ data_test <- list(lag = data_all$lag[175:length(data_all$y),],
                   mintemp = data_all$mintemp[175:length(data_all$y),])
 ```
 
-Fit a dynamic GAM with distributed lag terms for precipitation and minimum temperature and an `AR1` process for the unobserved temporal trend. We assume a `Poisson` observation model for this example
+Now we can fit a dynamic GAM with distributed lag terms for precipitation and minimum temperature and an `AR1` process for the unobserved temporal trend. The distributed lags are set up as tensor product smooth functions (see `help(te)` for an explanation of tensor product smooths) between `lag` and each covariate. We assume a `Poisson` observation model for this example
 ```{r, message=FALSE, warning=FALSE}
 test <- mvjagam(formula =  y ~ te(mintemp, lag, k = c(8, 4)) +
                   te(precip, lag, k = c(8, 4)),
@@ -99,7 +98,7 @@ test <- mvjagam(formula =  y ~ te(mintemp, lag, k = c(8, 4)) +
                 data_test = data_test,
                 family = 'poisson',
                 chains = 4,
-                burnin = 10000,
+                burnin = 12000,
                 trend_model = 'AR1')
 ```
 
@@ -108,7 +107,7 @@ The summary of the model provides useful information on convergence for unobserv
 summary_mvgam(test)
 ```
 
-Plots of the estimated forecast distribution and latent trend process
+As with all other `mvgam` objects, we can create plots of the estimated forecast distribution and the dynamic latent trend process
 ```{r, fig.width = 5, fig.height = 4, fig.align='center'}
 plot_mvgam_fc(test, series = 1, data_test = data_test, ylim = c(0, 100))
 ```
@@ -117,7 +116,13 @@ plot_mvgam_fc(test, series = 1, data_test = data_test, ylim = c(0, 100))
 plot_mvgam_trend(test, series = 1, data_test = data_test)
 ```
 
-Plots of the estimated smooth tensor product interactions for the distributed lag terms, which basically follow `mgcv`'s two-dimensional plotting utility but uses the `mvgam`'s estimated coefficients
+Traceplots of smooth penalties and latent trend parameters indicate good mixing and convergence of the four MCMC chains
+```{r, fig.width = 5, fig.height = 4, fig.align='center'}
+plot_mvgam_trace(test, 'rho')
+plot_mvgam_trace(test, 'trend')
+```
+
+We can also create quick plots of the estimated smooth tensor product interactions for the distributed lag terms, which basically follow `mgcv`'s two-dimensional plotting utility but uses the `mvgam`'s estimated coefficients
 ```{r, fig.width = 5, fig.height = 4, fig.align='center'}
 plot_mvgam_smooth(test, series = 1, smooth = 1)
 ```
@@ -126,7 +131,7 @@ plot_mvgam_smooth(test, series = 1, smooth = 1)
 plot_mvgam_smooth(test, series = 1, smooth = 2)
 ```
 
-As these plots are rather difficult to interpret, we can use the `predict_mvgam` function to generate more interpretable plots. We will focus on the effect of `mintemp` and generate a series of predictions to visualise how the estimated function changes over different lags. Set up prediction data by zeroing out all covariates apart from the covariate of interest
+If you are like me then you'll find these plots rather difficult to interpret! The more intense yellow/white colours indicate higher predicted values, with the deeper red colours representing lower predicted values, but actually making sense of how the functional response is expected to change over different lags is not easy from these plots. HOwever, we can use the `predict_mvgam` function to generate much more interpretable plots. First we will focus on the effect of `mintemp` and generate a series of predictions to visualise how the estimated function changes over different lags. Set up prediction data by zeroing out all covariates apart from the covariate of interest
 ```{r}
 newdata <- data_test
 newdata$year <- rep(0, length(newdata$year))
@@ -135,7 +140,7 @@ newdata$precip <- matrix(0, ncol = ncol(newdata$precip),
                          nrow = nrow(newdata$precip))
 ```
 
-Set up `viridis` plot colours and initiate the plot window to be centred around zero. We will then keep all `mintemp` values at zero apart from the particular lag being predicted so that we can visualise how the predicted function changes over lags of `mintemp`. Predictions are generated on the link scale. Note that we need to first generate predictions with all zeros to find the 'baseline' prediction so that we can shift by this baseline for generating a zero-centred plot, following the traditional `mgcv` partial effect plots
+Set up `viridis` plot colours and initiate the plot window to be centred around zero. We will then keep all `mintemp` values at zero apart from the particular lag being predicted so that we can visualise how the predicted function changes over lags of `mintemp`. Predictions are generated on the link scale in this case, though you could also use the response scale. Note that we need to first generate predictions with all covariates (including the `mintemp` covariate) zeroed out to find the 'baseline' prediction so that we can shift by this baseline for generating a zero-centred plot. That way our resulting plot will roughly follow the traditional `mgcv` partial effect plots
 ```{r, fig.width = 6, fig.height = 5, fig.align='center'}
 cols <- viridis::inferno(6)
 plot(1, type = "n",
@@ -152,23 +157,24 @@ preds <- predict_mvgam(test, series = 1, newdata = newdata, type = 'link')
 offset <- mean(preds)
 
 for(i in 1:6){
-  # Set up prediction matrix for mintemp with lag i as the prediction sequence
+  # Set up prediction matrix for mintemp with lag i as the prediction sequence; 
+  # use a sequence of mintemp values across the full range of observed values in the training data
   newdata$mintemp <- matrix(0, ncol = ncol(newdata$precip),
                             nrow = nrow(newdata$precip))
   newdata$mintemp[,i] <- seq(min(data_train$mintemp),
                              max(data_train$mintemp),
                              length.out = length(newdata$year))
 
-  # Predict on the link scale (intercept still included in prediction by default)
+  # Predict on the link scale and shift by the offset so that values are roughly centred at zero
   preds <- predict_mvgam(test, series = 1, newdata = newdata, type = 'link') - offset
 
-  # Calculate prediction quantiles
+  # Calculate empirical prediction quantiles
   probs = c(0.05, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.95)
   cred <- sapply(1:NCOL(preds),
                  function(n) quantile(preds[,n],
                                       probs = probs))
 
-  # Plot expected function posterior intervals (40-60%) in varying colours per lag
+  # Plot expected function posterior intervals (40-60%) and medians in varying colours per lag
   pred_upper <- cred[4,]
   pred_lower <- cred[6,]
   pred_vals <- seq(min(data_train$mintemp),
@@ -180,12 +186,12 @@ for(i in 1:6){
         col = scales::alpha(cols[i], 0.8), lwd = 2.5)
 }
 abline(h = 0, lty = 'dashed')
-legend('topleft',legend=paste0('lag', seq(0, 5)),
+legend('topleft', legend = paste0('lag', seq(0, 5)),
        bg = 'white', bty = 'n',
-       col=cols,lty=1,lwd=6)
+       col = cols, lty = 1, lwd = 6)
 ```
 
-This plot demonstrates how the effect of `mintemp` changes over different lags, with the 3 - 4 month lags showing more of a cyclic seasonal pattern (catches increasing 3 - 5 months following cold winter temperatures) while the more recent lags (lags 0 and 1) demonstrating a more linear response function (catches increasing as minimum temperature increases). This is hopefully a useful example for developing a better understanding of what a distributed lag model is capturing. And here is the same plot for precipitation, which demonstrates how a u-shaped functional relationship diminishes toward a flat function at lags 3 - 5 (though this effect is clearly less important in the model than the mintem * lag effect above)
+This plot demonstrates how the effect of `mintemp` is expected to change over different exposure lags, with the 3 - 5 month lags showing more of a cyclic seasonal pattern (catches expected to increase in the summer and autumn, roughly 3 - 5 months following cold minimum winter temperatures) while the recent lags (lags 0 and 1) demonstrate a more linear response function (catches broadly increasing as minimum temperature increases). This is hopefully a useful example for developing a better understanding of how a distributed lag model is attempting to recreate the data generating process. And here is the same plot for precipitation, which demonstrates how a u-shaped functional relationship diminishes toward a flat function at lags 2 - 5 (though this effect is clearly less important in the model than the mintemp * lag effect above)
 ```{r, fig.width = 6, fig.height = 5, fig.align='center'}
 newdata <- data_test
 newdata$year <- rep(0, length(newdata$year))
@@ -224,9 +230,9 @@ for(i in 1:6){
         col = scales::alpha(cols[i], 0.8), lwd = 2.5)
 }
 abline(h = 0, lty = 'dashed')
-legend('bottomleft',legend=paste0('lag', seq(0, 5)),
+legend('bottomleft', legend = paste0('lag', seq(0, 5)),
        bg = 'white', bty = 'n',
-       col=cols,lty=1,lwd=6)
+       col = cols, lty = 1, lwd = 6)
 ```
 
 All of the usual functions in `mvgam` can also be used for list data objects, so long as they contain the necessary fields `series`, `season` and `year`. For example, posterior retrodictive checks for the in-sample training period: 
@@ -238,3 +244,5 @@ and predictive checks for the out of sample forecast period (which demonstrates 
 ```{r, fig.width = 5, fig.height = 4, fig.align='center'}
 plot_mvgam_ppc(test, data_test = data_test, series = 1, type = 'cdf')
 ```
+
+Logical next steps for interrogating this model would be to trial different trend types (random walk, AR2, AR3), replace the distributed lag function for `precip` with a standard smooth function (that does not include lag interactions, as clearly the model above indicates that these are not supported) and inspect whether different covariates (such as `ndvi` or `maxtemp`) might play a role in modulating catches of `PP`. Finally, once we are satisfied that we have a well-performing model that we can understand and interrogate, we could expand up to a multivariate model by including other species as response variables. This would allow us to capture any possible unobserved dependencies in the catches of multiple co-occurring species in a single unified modelling framework
